--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,10 @@ HTTPD__DocumentRoot=/var/www/srv
 HTTPD_a2enmod=rewrite
 PHP__memory_limit=512M
 PHP__session.save_path=/var/www/var/sessions
+PHP__xdebug.remote_host=10.211.3.1
+PHP__xdebug.idekey=PHPSTORM
+PHP__xdebug.remote_enable=1
+PHP__xdebug.remote_autostart=1
+PHP__xdebug.profiler_enable_trigger=1
 PHP_php5enmod=mysqli xdebug zip
-XDEBUG_CONFIG=remote_host=10.211.03.1 idekey=PHPSTORM remote_enable=1 profiler_enable_trigger=1
 PHP_IDE_CONFIG=serverName=php
