--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - '7.0' # deprecated
   - '7.1' # Until 1 Dec 2019
   - '7.2' # Until 30 Nov 2020
-  - '7.3' # RC
+  - '7.3' # Until 6 Dec 2021
 
 
 addons:
@@ -15,18 +15,22 @@ addons:
 
 env:
   global:
-    - PHPUNIT_VERSION=6.5.*
+    - PHPUNIT_VERSION="~7|~8"
+    - COMPOSER_CACHE_DIR=/home/travis/.composer
   matrix:
     # see https://codex.wordpress.org/WordPress_Versions
     # see https://phpunit.de/supported-versions.html
-    - WP_VERSION=5.0
-    - WP_VERSION=nightly
+    - WP_VERSION=4.8.*
+    - WP_VERSION=5.0.*
+    - WP_VERSION=5.2.*
+    - WP_VERSION=dev-master
 
 matrix:
   include:
     # additional combination among env (as above)
     - php: '5.6'
       env: PHPUNIT_VERSION=~5 WP_VERSION=4.9
+    - php: '7.0'
     # Intermediate version tests due to unstable SemVer
     - php: '7.1'
       env: PHPUNIT_VERSION="~7" WP_VERSION=4.9
@@ -35,30 +39,39 @@ matrix:
     - php: '7.0'
     - php: '7.2'
     - php: '7.3'
-    - env: WP_VERSION=nightly
+    - env: WP_VERSION=dev-master
     - env: PHPUNIT_VERSION="~7"
+  # Do not wait for allowed failures
+  fast_finish: true
 
 services:
   - mysql
 
+cache:
+  directories:
+    - /home/travis/.composer
+
 before_install:
   - mysql -e 'CREATE DATABASE dev;'
   # Try supporting other versions
-  - composer require --update-with-dependencies phpunit/phpunit:$PHPUNIT_VERSION
+  - composer require --update-with-dependencies phpunit/phpunit:$PHPUNIT_VERSION johnpbloch/wordpress:$WP_VERSION
 
 install:
-  - composer update
+  - composer install
   # Using WP-CLI instead of Composer because this way we can use the env matrix (above).
-  - vendor/bin/wp --allow-root core download --version=$WP_VERSION --force
-  - vendor/bin/wp --allow-root config create --force --dbuser=travis --dbpass="" --dbhost="127.0.0.1"
+  - vendor/bin/wp --allow-root config create --force --dbuser=travis --dbpass="" --dbhost="127.0.0.1" --skip-check
   - vendor/bin/wp --allow-root core install --skip-email
-  # We get the latest patch version here to have less maintenance on the env matrix above.
-  - vendor/bin/wp --allow-root core update --minor
+  - for L in etc/*; do ln -s $L; done
+  - ln -s etc/.coveralls.yml
 
 script:
-  - if grep -irq '${SHORT}' lib/; then exit 1; fi
   - composer validate --strict --no-check-lock
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-clover coverage.xml
+  - vendor/bin/phpstan analyse lib/
+
+after_script:
+  # upload coverage.xml file to Coveralls to analyze it
+  - vendor/bin/coveralls --verbose
 
 after_failure:
   - cat srv/wp-content/debug.log || true
