--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,28 @@
     "wp-cli/entity-command": "^2.0"
   },
   "require-dev": {
+    "php": ">=7.1",
+    "php-coveralls/php-coveralls": "1.1.*",
+    "phpstan/phpstan": "0.11.*",
+    "phpunit/phpunit": "7.5.*|8.2.*",
+    "pretzlaw/phpunit-docgen": "3.0.*",
     "pretzlaw/wp-integration-test": "0.2.*",
-    "wp-cli/core-command": "^2.0",
-    "wp-cli/config-command": "^2.0"
+    "roave/security-advisories": "dev-master",
+    "squizlabs/php_codesniffer": "3.4.*",
+    "wp-cli/config-command": "2.0.*",
+    "wp-cli/core-command": "2.0.*",
+    "wp-cli/wp-cli": "2.2.*"
   },
   "config": {
     "sort-packages": true
   },
+  "extra": {
+    "wordpress-install-dir": "srv"
+  },
   "authors": [
     {
-      "name": "Pretzlaw",
-      "email": "mail@mike-pretzlaw.de"
+      "name": "rmp up",
+      "email": "mail@rmp-up.de"
     }
   ],
   "keywords": [
