--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
     ]
   },
   "require": {
-    "nelmio/alice": "~3",
+    "nelmio/alice": "~2|~3",
     "wp-cli/entity-command": "^2.0"
   },
   "require-dev": {
+    "johnpbloch/wordpress": "5.2.*",
     "php-coveralls/php-coveralls": "1.1.*",
     "phpstan/phpstan": "0.11.*",
     "phpunit/phpunit": "7.5.*|8.2.*",
@@ -25,14 +26,31 @@
     "symfony/yaml": "3.4.*",
     "wp-cli/config-command": "2.0.*",
     "wp-cli/core-command": "2.0.*",
-    "wp-cli/wp-cli": "2.2.*"
+    "wp-cli/db-command": "2.0.*",
+    "wp-cli/extension-command": "2.0.*",
+    "wp-cli/wp-cli": "2.2.*",
+    "wpackagist-plugin/woocommerce":"3.6.*"
   },
   "config": {
     "sort-packages": true
   },
   "extra": {
+    "installer-paths": {
+      "srv/wp-content/plugins/{$name}": [
+        "type:wordpress-plugin"
+      ],
+      "srv/wp-content/themes/{$name}": [
+        "type:wordpress-theme"
+      ]
+    },
     "wordpress-install-dir": "srv"
   },
+  "repositories":[
+    {
+      "type":"composer",
+      "url":"https://wpackagist.org"
+    }
+  ],
   "authors": [
     {
       "name": "rmp up",
