qa: Sanitized old code using phpStan inspections
The cold has been grown for some months now.
It was not meant to be used in production
or other projects than our own,
so it lacks a few software quality aspects.
We brought stability back by fixing all phpStan errors.

* etc/: Also added configuration files for other tools
* .travis.yml: Fixed typo

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,12 @@
 /var
 /vendor
 
-.coveralls.yml
+/.coveralls.yml
 .docker
 .env
 composer.lock
-phpcs.xml.dist
-phpstan.neon.dist
+/phpcs.xml.dist
+/phpstan.neon.dist
 
 
 ## Boilerplates
