--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "php-coveralls/php-coveralls": "1.1.*",
     "phpstan/phpstan": "0.11.*",
     "phpunit/phpunit": "7.5.*|8.2.*",
-    "pretzlaw/phpunit-docgen": "3.0.*",
+    "pretzlaw/phpunit-docgen": "2.1.*|3.0.*",
     "pretzlaw/wp-integration-test": "0.2.*",
     "roave/security-advisories": "dev-master",
     "squizlabs/php_codesniffer": "3.4.*",
