--- a/etc/phpstan.neon.dist
+++ b/etc/phpstan.neon.dist
@@ -1,5 +1,6 @@
 parameters:
     level: 7
+    inferPrivatePropertyTypeFromConstructor: true
     autoload_directories:
         - ./lib
     autoload_files:
