qa: Test all current available WooCommerce versions
* Also store composer cache for all builds on a branch
* Install 2 times because WordPress overwrites plugins some times
  when it is fetched after the plugins (in srv/wp-content/plugins)
* Check if installation is possible for current PHP version
* Install coveralls on CI only and no longer on dev machines

--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,7 @@ script:
 
 after_script:
   # upload coverage.xml file to Coveralls to analyze it
+  - composer require php-coveralls/php-coveralls # reinstall dev
   - vendor/bin/coveralls --verbose
 
 after_failure:
