qa: Test all current available WooCommerce versions
* Also store composer cache for all builds on a branch
* Install 2 times because WordPress overwrites plugins some times
  when it is fetched after the plugins (in srv/wp-content/plugins)
* Check if installation is possible for current PHP version
* Install coveralls on CI only and no longer on dev machines
* Possibly fasten up builds by disabling XDebug
  (see: https://docs.travis-ci.com/user/speeding-up-the-build/ )

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,7 @@ cache:
     - $HOME/.composer
 
 before_install:
+  - phpenv config-rm xdebug.ini
   - mysql -e 'CREATE DATABASE dev;'
   # Try supporting other versions
   - |
