ci: Install dependencies without bypassing platform reqs

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,12 +63,12 @@ before_install:
   - mysql -e 'CREATE DATABASE dev;'
   # Try supporting other versions
   - |
-    composer require --update-with-dependencies --ignore-platform-reqs \
+    composer require --update-with-dependencies \
     johnpbloch/wordpress:$WP_VERSION \
     phpunit/phpunit:$PHPUNIT_VERSION \
     wpackagist-plugin/woocommerce:$WOO_VERSION
-  # Rerun install because downloading WordPress will overwrite plugins
-  - composer install --ignore-platform-reqs
+  # Rerun install because downloading WordPress may overwrite plugins
+  - composer install
 
 install:
   - vendor/bin/wp --allow-root config create --force --dbuser=travis --dbpass="" --dbhost="127.0.0.1" --skip-check
@@ -81,8 +81,6 @@ script:
   - composer validate --strict --no-check-lock
   - vendor/bin/phpunit --coverage-clover coverage.xml
   - vendor/bin/phpstan analyse --no-progress lib/
-  # Check if platform requirements would be a problem for others
-  - composer install --no-dev
 
 after_script:
   # upload coverage.xml file to Coveralls to analyze it
