--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: php
 
 php:
   # see http://php.net/supported-versions.php
-  - '7.0' # deprecated
-  - '7.1' # Until 1 Dec 2019
-  - '7.2' # Until 30 Nov 2020
+  - '7.4' # Until 28 Nov 2022
   - '7.3' # Until 6 Dec 2021
-
+  - '7.2' # Until 30 Nov 2020
+  - '7.1' # deprecated but we try keeping it up
+  - '7.0' # deprecated but we try covering this
 
 addons:
   apt:
@@ -24,7 +24,7 @@ env:
   matrix:
     # see https://codex.wordpress.org/WordPress_Versions
     # see https://phpunit.de/supported-versions.html
-    - WP_VERSION=5.3.*
+    - WP_VERSION=5.3.* WOO_VERSION="3.8.*"
     - WP_VERSION=5.2.* WOO_VERSION="3.7.*"
     - WP_VERSION=5.1.* WOO_VERSION="3.6.*"
     - WP_VERSION=5.0.* WOO_VERSION="3.5.*"
@@ -33,7 +33,6 @@ env:
     - WP_VERSION=4.7.* WOO_VERSION="3.2.*"
     - WP_VERSION=4.6.* WOO_VERSION="3.1.*"
     - WP_VERSION=4.5.* WOO_VERSION="3.0.*"
-    - WP_VERSION=dev-master
 
 matrix:
   include:
@@ -41,15 +40,14 @@ matrix:
     - php: '5.6'
       env: PHPUNIT_VERSION=~5 WP_VERSION=4.9.*
     - php: '7.0'
-    # Intermediate version tests due to unstable SemVer
-    - php: '7.1'
+    # Special cases
+    - php: '7.1' # unstable semver in phpunit ~7
       env: PHPUNIT_VERSION="~7" WP_VERSION=4.9.*
-  # in the process to achieve support
   allow_failures:
+    # other things in the process to achieve support
     - php: '5.6'
     - php: '7.0'
     - env: WP_VERSION=dev-master
-    - env: PHPUNIT_VERSION="~7"
   # Do not wait for allowed failures
   fast_finish: true
 
