--- a/wp-cli.yml
+++ b/wp-cli.yml
@@ -26,6 +26,6 @@ core config:
     define( 'WP_CACHE', false );                  // do not cache
 
     define( 'WP_DEBUG', true );
-    define( 'WP_DEBUG_DISPLAY', true );
+    define( 'WP_DEBUG_DISPLAY', false );
     define( 'WP_DEBUG_LOG', true );
 
