composer: Reviewed, obsolete removed, old updated
* No need for wp-cli/entity-command
* Marked supported PHP Version
* Marked lowest possible WP Version (if johnpbloch/wordpress is used)
* Swapped roave/security-advisories to testing where it belongs

--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,7 @@ script:
   - composer validate --strict --no-check-lock
   - vendor/bin/phpunit --coverage-clover coverage.xml
   - vendor/bin/phpstan analyse --no-progress lib/
+  - composer require --dev roave/security-advisories:dev-master
 
 after_script:
   # upload coverage.xml file to Coveralls to analyze it
