--- a/composer.json
+++ b/composer.json
@@ -11,25 +11,29 @@
     ]
   },
   "require": {
-    "nelmio/alice": "~2|~3",
-    "wp-cli/entity-command": "^2.0"
+    "php": "~7.0",
+    "nelmio/alice": "~2|~3"
   },
   "require-dev": {
-    "johnpbloch/wordpress": "5.2.*",
+    "johnpbloch/wordpress": "5.3.*",
     "phpstan/phpstan": "0.11.*",
-    "phpunit/phpunit": "7.5.*|8.2.*",
+    "phpunit/phpunit": "~7|~8",
     "pretzlaw/phpunit-docgen": "2.1.*|3.0.*",
     "pretzlaw/wp-integration-test": "0.2.*",
-    "roave/security-advisories": "dev-master",
-    "squizlabs/php_codesniffer": "3.4.*",
-    "symfony/yaml": "3.4.*",
-    "wp-cli/config-command": "2.0.*",
-    "wp-cli/core-command": "2.0.*",
-    "wp-cli/db-command": "2.0.*",
-    "wp-cli/extension-command": "2.0.*",
-    "wp-cli/wp-cli": "2.2.*",
-    "wpackagist-plugin/woocommerce":"3.7.*",
-    "wpackagist-plugin/yith-woocommerce-product-bundles":"1.1.*"
+    "squizlabs/php_codesniffer": "~3",
+    "wp-cli/config-command": "~2",
+    "wp-cli/core-command": "~2",
+    "wp-cli/db-command": "~2",
+    "wp-cli/extension-command": "~2",
+    "wp-cli/wp-cli": "~2",
+    "wpackagist-plugin/woocommerce": "3.8.*",
+    "wpackagist-plugin/yith-woocommerce-product-bundles": "1.1.*"
+  },
+  "suggest": {
+    "wp-cli/wp-cli": "Allows using 'wp fixture' on CLI"
+  },
+  "conflict": {
+    "johnpbloch/wordpress": "<4.5.0"
   },
   "config": {
     "sort-packages": true
