--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,8 +16,9 @@
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory>lib/</directory>
             <exclude>
-                <file>lib/Cli/FixtureCommand.php</file>
                 <directory>lib/Test</directory>
+                <file>lib/Cli/FixtureCommand.php</file>
+                <file>wp-cli.php</file>
             </exclude>
         </whitelist>
     </filter>
