dev: Coveralls changed the name of the executable
We use coveralls.io to measure the code coverage over time.
With some release the executable has been renamed so it
didn't uploads coverage.xml anymore in the end.
To prevent this and other possible issues
we install coverals alone and run the executable for '^2.2'.

* .gitignore: Also ignore the coverage file in root dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -84,8 +84,9 @@ script:
 
 after_script:
   # upload coverage.xml file to Coveralls to analyze it
-  - composer require php-coveralls/php-coveralls # reinstall dev
-  - vendor/bin/coveralls --verbose
+  - rm composer.json composer.lock # to prevent conflicts
+  - composer require --dev 'php-coveralls/php-coveralls:^2.2'
+  - travis_retry php vendor/bin/php-coveralls
 
 after_failure:
   - cat srv/wp-content/debug.log || true
