--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   php73:
     <<: *php
-    image: php:7.3-apache
+    image: pretzlaw/php:7.3-apache
     networks:
       default:
         ipv4_address: 10.211.3.73
