--- a/etc/phpstan.neon.dist
+++ b/etc/phpstan.neon.dist
@@ -11,6 +11,8 @@ parameters:
         - ./lib/wp-cli.php
         - ./lib/bootstrap.php
         - ./lib/Repository/WooCommerce/ProductBundles/Bundles.php
+    reportUnmatchedIgnoredErrors: false
     ignoreErrors:
         - '#Access to an undefined property object::\$ID.#'
         - '# on an unknown class WP_CLI.#'
+        - '#wc_update_product_lookup_tables#'
