ci: Using GitLab to maintain project
The current repository is hosted on GitHub
and the CI is done by TravisCI.
Last one has some big bottlenecks which makes us wait
a couple of hours for the latest QA.
We move the project to GitLab where we can use our
own test runner which removes the bottleneck.

* WordPressTest.php:
  * Adding PHPMailer to the list of classes
    because it could not be resolved properly when testing with WP 5.7
    (possibly due to different line endings)
  * Adding new classes to the list of uncovered classes
    which were introduced in WP 5.6 or WP 5.7

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,13 @@
 /var
 /vendor
 
+/.bash_history
 /.coveralls.yml
 /coverage.xml
 .docker
 .env
 composer.lock
+/.multisite
 /phpcs.xml.dist
 /phpstan.neon.dist
 
