--- a/wp-cli.yml
+++ b/wp-cli.yml
@@ -21,7 +21,7 @@ core config:
   extra-php: |
     define( 'WP_ALLOW_MULTISITE', true );
 
-    if ( is_readable( '.multisite' ) ) {
+    if ( is_readable( dirname( __DIR__ ) . '/.multisite' ) ) {
       define( 'MULTISITE', true );
       define( 'SUBDOMAIN_INSTALL', false );
       define( 'DOMAIN_CURRENT_SITE', '10.211.3.71' );
@@ -39,4 +39,5 @@ core config:
     define( 'WP_DEBUG', true );
     define( 'WP_DEBUG_DISPLAY', false );
     define( 'WP_DEBUG_LOG', true );
+    define( 'WP_DISABLE_FATAL_ERROR_HANDLER', true );
 
