--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "fzaninotto/faker": "~1"
   },
   "require-dev": {
+    "bamarni/composer-bin-plugin": "1.4.*",
     "johnpbloch/wordpress": "5.3.*",
     "phpstan/phpstan": "0.11.*",
     "phpunit/phpunit": "~7|~8",
@@ -46,7 +47,14 @@
   "config": {
     "sort-packages": true
   },
+  "scripts": {
+    "post-install-cmd": ["@composer bin all install --ansi"],
+    "post-update-cmd": ["@composer bin all update --ansi"]
+  },
   "extra": {
+    "bamarni-bin": {
+      "target-directory": "etc"
+    },
     "installer-paths": {
       "srv/wp-content/plugins/{$name}": [
         "type:wordpress-plugin"
