dev: Swap PHPUnit to its own bin-namespace for compatibility
PHPUnit helps us doing some integration tests with WordPress
and some plugins/themes.
Unfortunately this did not support PHP 7.0 and 8.0 very well
and changes in its API a lot even within major versions
leading to failing tests sometimes.
We swap PHPUnit using the composer-bin-plugin
to separately and precisely maintain it.

--- a/etc/gitlab-ci.yaml
+++ b/etc/gitlab-ci.yaml
@@ -60,7 +60,7 @@ test: &test
   image: pretzlaw/php:${PHP_VERSION}-apache
   script:
     - phpdbg -qrr vendor/bin/phpunit
-      -c phpunit.xml.dist
+      -c etc/phpunit/phpunit.ci.xml
       --coverage-clover coverage.xml
       --log-junit phpunit-report.xml
   parallel:
