ci: Recovering tests against deprecated PHP versions
Testing for PHP 7.0 requires PHPUnit 6.x or lower.
This very old PHPUnit version has a complete different interface
for testing things which makes tests in PH 7.0 environment fail.
We try to bring up some compatibilities in the base test-class
to support testing with PHP 7.0 and old PHPUnit again.

* Remember that such compatibility should actually be a part of a
  third-party package that takes care of such compatibility
  (e.g. "rmp-up/phpunit-compat")
  and should only be a temporary solution.
* Raising minimum WP version to 4.7
  due to needed WP_Taxonomy class
* Added PHP 7.2 to docker container for local testing
* WP 4.7 and PHP 7.2 seem incompatible due to
  "count(): Parameter must implement Countable"

--- a/etc/gitlab-ci.yaml
+++ b/etc/gitlab-ci.yaml
@@ -23,8 +23,8 @@ variables:
   MYSQL_USER: dev
   MYSQL_PASSWORD: dev
   MYSQL_ROOT_PASSWORD: dev
-  WP_VERSION: "5.7.*" # fallback
-  PHP_VERSION: "7.3" #
+  WP_VERSION: "5.7.*" # in doubt use the latest
+  PHP_VERSION: "7.3"
 
 cache:
   key: global
@@ -67,7 +67,7 @@ test: &test
   parallel:
     matrix:
     - PHP_VERSION: "7.3" # Until 6 Dec 2021
-      WP_VERSION: "4.7.*"
+      WP_VERSION: "4.8.*"
 
     # PHP 7.4 is only supported by WP >=4.9
     - PHP_VERSION: "7.4" # Until 28 Nov 2022
@@ -111,8 +111,19 @@ deprecated:
   <<: *compat
   parallel:
     matrix:
-      - PHP_VERSION: "7.1" # deprecated but we try keeping it up
-      - PHP_VERSION: "7.2" # deprecated but we try keeping it up
+      # Deprecated PHP versions but we try keeping it up
+      # Testing only the WP edges (low/high versions) should cover enough
+      - PHP_VERSION: "7.0"
+      - PHP_VERSION: "7.0"
+        WP_VERSION: "4.7.*"
+
+      - PHP_VERSION: "7.1"
+      - PHP_VERSION: "7.1"
+        WP_VERSION: "4.7.*"
+
+      - PHP_VERSION: "7.2"
+      - PHP_VERSION: "7.2"
+        WP_VERSION: "4.7.*"
 
 upcoming:
   <<: *compat
@@ -126,7 +137,6 @@ upcoming:
         WP_VERSION: "5.5.*"
       - WP_VERSION: "4.5.*"
       # should have, because WP still supports it so we try this too
-      - PHP_VERSION: "7.0"
       - PHP_VERSION: "5.6"
       # Just curious, if it would fail with the upcoming WP version
       - WP_VERSION: "dev-master"
