--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,29 @@
 version: '3'
 
 services:
-  php71: &php
-    image: pretzlaw/php:7.1-apache
+  php70: &php
+    image: pretzlaw/php:7.0-apache
     volumes:
       - ".:/var/www"
       - "$COMPOSER_LOCAL:/var/composer"
-    env_file: [.env]
+    env_file: [ .env ]
+    networks:
+      default:
+        ipv4_address: 10.211.3.70
+
+  php71:
+    <<: *php
+    image: pretzlaw/php:7.1-apache
     networks:
       default:
         ipv4_address: 10.211.3.71
+
+  php72:
+    <<: *php
+    image: pretzlaw/php:7.2-apache
+    networks:
+      default:
+        ipv4_address: 10.211.3.72
 
   php73:
     <<: *php
