--- a/etc/phpunit/composer.json
+++ b/etc/phpunit/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "phpunit/phpunit": "~7|~8",
+    "phpunit/phpunit": "~6|~7|~8",
     "pretzlaw/phpunit-docgen": "2.1.*|3.0.*",
     "pretzlaw/wp-integration-test": "0.3.*",
     "rmp-up/doc-parser": "0.1.*",
