--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,11 @@
   },
   "require": {
     "php": "~7.0|8.0.*",
-    "nelmio/alice": "~2|~3",
-    "fzaninotto/faker": "~1"
+    "nelmio/alice": "~3"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "1.4.*",
-    "johnpbloch/wordpress": "5.7.*",
+    "johnpbloch/wordpress": ">=4.7.0",
     "squizlabs/php_codesniffer": "~3",
     "wpackagist-plugin/woocommerce": "3.*",
     "wpackagist-plugin/yith-woocommerce-product-bundles": "1.1.*"
